src/objects/Plot__c.object
<CustomObject>
    <description>Object used to capture Plot information, and this is linked to Business Parks. The inventory is managed in Yardi and pushed to Salesforce.</description>
    <fields>
        <fullName>Access_Status__c</fullName>
        <label>Access Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in plot lease</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plots</relationshipLabel>
        <relationshipName>Plots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to decide whether this plot is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Construction_Comm_Dt__c</fullName>
        <label>Actual Construction Comm Dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Construction_Comp_Dt__c</fullName>
        <label>Actual Construction Comp Dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Handover_Date__c</fullName>
        <label>Actual Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_PLU_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All PLU Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocate_Infrastructure_Cost__c</fullName>
        <label>Allocate Infrastructure Cost</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Exceptions__c</fullName>
        <label>Approved Exceptions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_sqft__c</fullName>
        <label>Area sqft</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Park_Yardi__c</fullName>
        <description>Short name for business park from Yardi</description>
        <label>Business Park Yardi</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Plots</relationshipLabel>
        <relationshipName>Plots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capped_Irrigation_Demand_M3_d__c</fullName>
        <label>Capped Irrigation Demand (M3/d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capped_Sewage_Generation_M3_d__c</fullName>
        <label>Capped Sewage Generation (M3/d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capped_Water_Demand_M3_day__c</fullName>
        <label>Capped Water Demand (M3/day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cause_Reason__c</fullName>
        <label>Cause Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster_Phase__c</fullName>
        <label>Cluster/Phase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Non_Core__c</fullName>
        <label>Core / Non-Core</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Non-Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <label>DM#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTMFZA_Plot_ID__c</fullName>
        <description>DDA sf instance record id</description>
        <label>DTMFZA Plot ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Status__c</fullName>
        <label>Development Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Under Development</fullName>
                </value>
                <value>
                    <fullName>Undeveloped</fullName>
                </value>
                <value>
                    <fullName>Construction on hold</fullName>
                </value>
                <value>
                    <fullName>Construction Resumed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Status TBC</fullName>
                    <isActive>false</isActive>
                    <label>Status TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District_Cooling_Load_TR__c</fullName>
        <label>District Cooling Load (TR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drainage_Network_Status__c</fullName>
        <label>Drainage Network Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Attributues__c</fullName>
        <label>Finance Attributues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_SetBack_Max_m__c</fullName>
        <label>Front SetBack Max (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_SetBack_Min_m__c</fullName>
        <label>Front SetBack Min (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant_Rate__c</fullName>
        <label>Grant Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Completion__c</fullName>
        <label>Infrastructure % Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Phasing_Year__c</fullName>
        <label>Infrastructure Phasing (Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastucture_Cost_Land_Amount__c</fullName>
        <label>Infrastucture Cost Land (Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Leasable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Leasable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Disposal__c</fullName>
        <label>Land Disposal</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_as_per_DLD__c</fullName>
        <label>Location as per DLD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Community_Chargeability__c</fullName>
        <label>Master Community Chargeability</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Building_Height__c</fullName>
        <label>Max Building Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Coverage__c</fullName>
        <label>Max. Coverage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Height__c</fullName>
        <label>Max. Height</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Plot_Coverage__c</fullName>
        <label>Max Plot Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Front_Setback_mt__c</fullName>
        <label>Min Front Setback mt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Rear_Setback_mt__c</fullName>
        <label>Min Rear Setback mt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Side1_Setback_mt__c</fullName>
        <label>Min Side1 Setback mt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Side2_Setback_mt__c</fullName>
        <label>Min Side2 Setback mt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>lease</fullName>
                </value>
                <value>
                    <fullName>sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in plot lease</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Plots</relationshipLabel>
        <relationshipName>Plots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Plot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origin Plot</label>
        <referenceTo>Plot__c</referenceTo>
        <relationshipLabel>Plots</relationshipLabel>
        <relationshipName>Plots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Transaction__c</fullName>
        <label>Original Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Status__c</fullName>
        <label>Ownership Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Disposal_Date__c</fullName>
        <label>Planned Disposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Operation_Date__c</fullName>
        <label>Planned Operation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plot_Allocated_for_Bidding__c</fullName>
        <label>Plot Allocated for Bidding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plot_Category__c</fullName>
        <label>Plot Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot_Code_YARDI__c</fullName>
        <externalId>true</externalId>
        <label>Plot Code YARDI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plot_Condition__c</fullName>
        <label>Plot Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plot_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Plot External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plot_GFA_ft__c</fullName>
        <label>Plot GFA (ft²)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plot_GFA_m__c</fullName>
        <label>Plot GFA (m²)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plot_Name_YARDI__c</fullName>
        <label>Plot Name YARDI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plot_Number__c</fullName>
        <formula>Business_Park__r.Name + &quot; - &quot; +  Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plot Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot_Sub_Category_Code__c</fullName>
        <label>Plot Sub Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot_Sub_Category__c</fullName>
        <label>Plot Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_Activities__c</fullName>
        <label>Purpose &amp; Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rear_SetBack_Max_m__c</fullName>
        <label>Rear SetBack Max (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rear_SetBack_Min_m__c</fullName>
        <label>Rear SetBack Min (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Frozen_Plot__c</fullName>
        <label>Reason for Frozen Plot</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognised_Year__c</fullName>
        <label>Revenue Recognised - Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SIF_Amount__c</fullName>
        <label>SIF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Aproved_Payment_Terms__c</fullName>
        <label>Sale-Aproved Payment Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Name__c</fullName>
        <label>Sector Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Yardi_Id__c</fullName>
        <label>Sector Yardi Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between plot and sector</description>
        <label>Sector</label>
        <referenceTo>Sector__c</referenceTo>
        <relationshipLabel>Plots</relationshipLabel>
        <relationshipName>Plots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sewage_Network_Status__c</fullName>
        <label>Sewage Network Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Side_SetBack_Max_m__c</fullName>
        <label>Side SetBack Max (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Side_SetBack_Min_m__c</fullName>
        <label>Side SetBack Min (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available - Sale</fullName>
                </value>
                <value>
                    <fullName>Available - Lease</fullName>
                </value>
                <value>
                    <fullName>Pre Sale</fullName>
                </value>
                <value>
                    <fullName>Pre Lease</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Grant__c</fullName>
        <label>Status of Grant</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storm_Water_Discharge_M3_day__c</fullName>
        <label>Storm Water Discharge (M3/day)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Connected_Load_KW__c</fullName>
        <label>Total Connected Load (KW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnitId__c</fullName>
        <label>UnitId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Trips_AM__c</fullName>
        <label>Vehicle Trips - AM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Trips_PM__c</fullName>
        <label>Vehicle Trips - PM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Network_Status__c</fullName>
        <label>Water Network Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Plot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plot_Code_YARDI__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>